--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,12 @@
   color: #61dafb;
 }
 
+.loadingBar {
+  background-color: navy;
+  height: 5px;
+  border-radius: 3px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
